--- a/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
+++ b/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
@@ -35,7 +35,7 @@ body:
 
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
   validations:
-    required: falselink: 
+    required: false
 - type: markdown
   attributes:
     value: |
