--- a/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
+++ b/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
@@ -8,14 +8,14 @@ body:
     value: |
       Thanks for taking the time to assign this coursework! If you prefer, you can fill in the markdown template.
 - type: input
-  validations: required
-  label: Link to the coursework
+  attributes:
+    validations: required
+    label: Link to the coursework
 - type: textarea
   attributes:
     label: What is the point of this assignment?
     description: Clearly explain the purpose of this assignment and how trainees can evaluate this.
-  validations:
-    required: true
+    validations: required
 - type: textarea
   attributes:
     label: How to Submit
@@ -25,17 +25,14 @@ body:
       Make regular small commits with clear messages
       When you are ready, open a Pull Request to the CYF repo
       Make sure you fill in the PR template provided
-  validations:
-    required: true
+  validations: required
 - type: textarea
   attributes:
     label: Anything else?
     description: |
       Links? References? Anything that will give more context
 
-      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
-  validations:
-    required: false
+      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.   
 - type: markdown
   attributes:
     value: |
