--- a/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
+++ b/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
@@ -9,13 +9,15 @@ body:
       Thanks for taking the time to assign this coursework! If you prefer, you can fill in the markdown template.
 - type: input
   attributes:
-    validations: required
     label: Link to the coursework
+  validations:
+    required: true
 - type: textarea
   attributes:
     label: What is the point of this assignment?
     description: Clearly explain the purpose of this assignment and how trainees can evaluate this.
-    validations: required
+  validations:
+    required: true
 - type: textarea
   attributes:
     label: How to Submit
@@ -25,7 +27,8 @@ body:
       Make regular small commits with clear messages
       When you are ready, open a Pull Request to the CYF repo
       Make sure you fill in the PR template provided
-  validations: required
+  validations:
+    required: true
 - type: textarea
   attributes:
     label: Anything else?
