--- a/.github/ISSUE_TEMPLATE/pd-assignment.yml
+++ b/.github/ISSUE_TEMPLATE/pd-assignment.yml
@@ -50,11 +50,9 @@ body:
         1. Update labels
         - priority -- is this coursework key, mandatory, or stretch?
         - size -- help trainees plan their time with rough estimation
-        2. Add to milestone
-        - week 1,2,3,4
-        3. Add to project backlog
+        2. Add to project backlog
         - add to the project named the same as this repo
-        - fill in custom fields -- priority, size, hours -- to match this issue
+        - fill in custom fields -- priority, size, hours, week -- to match this issue
 
         Once your ticket is complete, you may like to check it out on the example project board attached to this repo.
         This is so you understand how trainees will use your work.
