add objectives formatting

--- a/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
+++ b/.github/ISSUE_TEMPLATE/tech-ed-assignment.yml
@@ -1,7 +1,7 @@
 name: Tech Ed Coursework
 description: Assign a piece of technical coursework
-title: "[TECH ED] <title>"
-labels: [Tech Ed, 🏕 Priority Mandatory, 🐂 Size Medium]
+title: "<title>"
+labels: [Tech Ed, 🏕 Priority Mandatory, 🐂 Size Medium, 📅 Module 1]
 body:
   - type: markdown
     attributes:
@@ -21,6 +21,14 @@ body:
       label: Link to the coursework
     validations:
       required: true
+  - type : textarea
+    attributes:
+      label: Learning Objectives
+      description: https://common.codeyourfuture.io/common-theme/shortcodes/objectives/
+      placeholder: |
+        <!--{{<objectives}}--> 
+        - [ ] CYF format, task list formatting
+        <!--{{</objectives}}-->
   - type: textarea
     attributes:
       label: Why are we doing this?
@@ -37,14 +45,14 @@ body:
     attributes:
       label: How to get help
       description: State simply how trainees can get help with this assignment
-      placeholder: |
+      value: |
         Share your blockers in your class channel
-        https://syllabus.codeyourfuture.io/guides/asking-questions
+        https://curriculum.codeyourfuture.io/guides/getting-help/asking-questions/
   - type: textarea
     attributes:
       label: How to submit
       description: State in clear steps how a trainee can submit this assignment.
-      placeholder: |
+      value: |
         Fork the repo to your own GitHub account
         Make regular small commits with clear messages
         When you are ready, open a Pull Request to the CYF repo
@@ -73,8 +81,8 @@ body:
         - priority -- is this coursework key, mandatory, or stretch? Pick one.
         - size -- help trainees plan their time with rough estimation. Pick one
         - topics -- add all that seem relevant to you. 
-        2. Add to milestone
-        - week 1,2,3,4
+        2. Add a Sprint label to add to the backlog view
+        - sprint 1,2,3,4
 
         Once your ticket is complete, you may like to add it to the example project board attached to this repo.
         This is so you understand how trainees will use your work. Nobody has built a board copier yet, so trainees will be doing this step themselves.
